# coarray-fortran-examples

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md  ford-settings.md
.github/ISSUE_TEMPLATE/: bug-report--------.md  feature_request.md
.github/workflows/: ci.yml  cmake_x64.yml
src/: CMakeLists.txt  add.f90  initialization.f90  main.f90  parameters.f90
test/: CMakeLists.txt
test/initialization/: CMakeLists.txt  test_initialization.f90
